syntax = "proto3";

package fintekkers.models.security;

import "fintekkers/models/security/tenor_type.proto";

option java_multiple_files = true;

option java_outer_classname = "TenorProtos";

message TenorProto {
  string object_class = 1;
  string version = 2;

  string term_value = 5;
  fintekkers.models.security.TenorTypeProto tenor_type = 6;
}
